hphp/test/zend/good/ext/gd/tests/imageellipse_error6.php.skipif
<?php
<<__EntryPoint>> function main() {
if (!extension_loaded("gd")) die("skip GD not present");
}
