hphp/test/zend/bad/ext/standard/tests/filters/chunked_001.php.skipif
<?php
$filters = stream_get_filters();
if(! in_array( "dechunk", $filters )) die( "chunked filter not available." );
?>